--- a/styles/Certificate.css
+++ b/styles/Certificate.css
@@ -198,7 +198,7 @@ body {
     background: rgba(34, 34, 34, 0.93);
     border-radius: 18px;
     box-shadow: 0 8px 36px rgba(0, 0, 0, 0.16);
-    max-width: 320px;
+    max-width: 400px;
     min-width: 230px;
     width: 100%;
     display: flex;
@@ -217,8 +217,8 @@ body {
 
 .certificate-img {
     width: 100%;
-    height: 120px;
-    object-fit: cover;
+    height: 200px;
+    object-fit: fill;
     object-position: center;
     border-top-left-radius: 18px;
     border-top-right-radius: 18px;
@@ -355,7 +355,7 @@ body {
     }
 
     .certificate-card {
-        max-width: 97vw;
+        max-width: 80vw;
         min-width: 0;
     }
 
@@ -378,7 +378,7 @@ body {
     .certificate-img {
         border-top-left-radius: 9px;
         border-top-right-radius: 9px;
-        height: 70px;
+        height: 150px;
     }
 
     .certificate-content {
